--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
     "@netlify/functions": "^2.8.1",
+    "@testing-library/jest-dom": "^6.5.0",
     "dotenv": "^16.4.5",
     "node-fetch": "^3.3.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "vitest": "^2.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
