--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "vitest-fetch-mock": "^0.4.1"
   }
 }
